--- a/CódigoFuente/BitacorasProduccion/Views/IT_extensiones/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_extensiones/Edit.cshtml
@@ -45,6 +45,7 @@
                             @Html.HiddenFor(model => model.clave)
                             @Html.HiddenFor(model => model.activo)
                             @Html.HiddenFor(model => model.nacimientoFecha)
+                            @Html.HiddenFor(model => model.ingresoFecha)
                             @Html.HiddenFor(model => model.nivel)
                             @Html.HiddenFor(model => model.compania)
                             @Html.HiddenFor(model => model.id_fotografia)
