2023-01-18 Se agregan pequeñas modificaciones al Matriz de Requerimientos.

--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/CrearMatriz.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/CrearMatriz.cshtml
@@ -496,6 +496,8 @@
                 });
             });
 
+            $("#id_jefe_directo").change();
+
             $('input').on('ifChecked', function (event) {
                 verificaChecks(event);
             });
