--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Edit.cshtml
@@ -66,6 +66,7 @@
 
                             @* input para saber si está o no activo el campo de soporte *@
                             <input type="hidden" name="cambio_documento_soporte" id="cambio_documento_soporte" value="0" />
+                            <input type="hidden" name="elimina_documento" id="elimina_documento" value="false" />
 
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.numeroEmpleado, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
