2023-01-19 Se agrega valor por defecto a Gasto sin Comprobante (GV)

--- a/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/ComprobacionGastos.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/ComprobacionGastos.cshtml
@@ -1273,6 +1273,8 @@ function AgregaConceptoSinFactura() {
     //agrega evento para cambios en asigna eventos
     asignaEventosInput();
 
+    //seleccciona el valor del combo por defecto;
+    document.getElementById("GV_comprobacion_rel_gastos[" + numConcepto + "].id_comprobacion_tipo_gastos_viaje").value = "1";
     //Aumenta el número de concepto en 1
     numConcepto++;
     //aumenta en uno el número de comprobantes cargados
@@ -1375,11 +1377,11 @@ function AgregaConceptoExtranjero() {
 
     //agrega evento para cambios en asigna eventos
     asignaEventosInput();
-
+   
     //Aumenta el número de concepto en 1
     numConcepto++;
     //aumenta en uno el número de comprobantes cargados
-    AsignaNumeroConcepto();
+    AsignaNumeroConcepto();   
 
     // Initialize Select2 Elements (debe ir después de asignar el valor)
     $('.select2bs4').select2({
@@ -1393,6 +1395,9 @@ function AgregaConceptoExtranjero() {
         timer: '2500'
     })
 }
+
+   
+
 
 //variables utilizadas para numeración de conceptos y facturas
 var numConcepto = 200;
