--- a/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/Pendientes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/Pendientes.cshtml
@@ -93,6 +93,9 @@
                                                 </div>
                                             </div>
                                         }
+                                        <a href="@Url.Action("SolicitudSinAnticipo", ViewBag.ControllerName, new { s_estatus = estatus })" class="btn btn-success btn-sm" title="Comprobación Sin Anticipo">
+                                            <i class="fa-regular fa-plus-square"></i> Comprobaci&oacute;n Sin Anticipo
+                                        </a>
                                         <hr />
 
                                     </div>
