--- a/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/Solicitudes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/Solicitudes.cshtml
@@ -90,9 +90,16 @@
                                                 </div>
                                             </div>
                                         }
+
+                                        <a href="@Url.Action("SolicitudSinAnticipo", ViewBag.ControllerName, new { s_estatus = estatus })" class="btn btn-success btn-sm" title="Comprobación Sin Anticipo">
+                                            <i class="fa-regular fa-plus-square"></i> Comprobaci&oacute;n Sin Anticipo
+                                        </a>
+
                                         <hr />
 
                                     </div>
+
+
                                     @if (String.IsNullOrEmpty(estatus))
                                     {
                                         <div class="alert alert-info" role="alert">
@@ -298,9 +305,9 @@
                                                             (item.estatus == Bitacoras.Util.GV_comprobacion_estatus.FINALIZADO))
                                                             {
 
-                                                                <a href="@Url.Action("ComprobacionGastos", "ComprobacionGV", new { id = item.GV_solicitud.id, s_estatus = estatus })" class="btn btn-success " title="Comprobar gastos">
-                                                                    <i class="fa-solid fa-check-to-slot"></i>
-                                                                </a>
+                                                                @*<a href="@Url.Action("ComprobacionGastos", "ComprobacionGV", new { id = item.GV_solicitud.id, s_estatus = estatus })" class="btn btn-success " title="Comprobar gastos">
+                                        <i class="fa-solid fa-check-to-slot"></i>
+                                    </a>*@
                                                             }
 
 
